# LearningRust

./: .gitignore  index.md  kaisya.md  mojiretsu.md
01/: index.md
01/Section2/: .gitignore  index.md
Memory/: index.md
String/: mojiretsu.md
app/src/: main.rs
calc/: Cargo.toml
calc/src/: main.rs
calc2/: Cargo.toml
calc2/src/: main.rs
cli-app/: .gitignore  Cargo.toml
cli-app/src/: main.rs
command_find/: Cargo.toml  cp-tests.sh
command_find/src/: lib.rs  main.rs
command_find/tests/: cli.rs
command_line_cat/: Cargo.toml
command_line_cat/src/: lib.rs  main.rs
command_line_cat/tests/: cli.rs
command_line_echo/: Cargo.toml
command_line_echo/src/: main.rs
command_line_echo/tests/: cli.rs
command_line_find/: Cargo.toml
command_line_find/src/: lib.rs  main.rs
command_line_find/tests/: cli.rs
command_line_head/: Cargo.toml
command_line_head/src/: lib.rs  main.rs
command_line_hello/: Cargo.toml
command_line_uniq/: Cargo.toml  output.txt  test.txt
command_line_wc/: Cargo.toml
db_server/: .gitignore  Cargo.toml  docker-compose.yml
image/: image.drawio
interpreter1/: Cargo.toml
lambda-test/: Cargo.toml  memo.md
markdown/: index.md
md_marge/: Cargo.toml
md_merge/: Cargo.toml  append.md  base.md  config.yml  merged.md
mutable/: index.md
my_lang/: Cargo.toml
playground/: Cargo.toml
playground2/: Cargo.toml  my_enum.rs
playground3/: Cargo.toml
playground4-tauri/: package.json
poker/: Cargo.toml
te/: Cargo.toml
toy_interpreter/: Cargo.toml
web-sample/: Cargo.toml
web_server/: Cargo.toml
(+133 files in other folders)
