[package]
name = "command_line_find"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
walkdir = "2"
regex = "1"
anyhow = "1.0.82"
pretty_assertions = "1.4.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"
